@@ -11,6 +11,9 @@ documents those changes that are of interest to users and admins.
     with a job running or trying to run on it.
  -- Execute slurm_spank_job_epilog when there is no system Epilog configured.
  -- Fix for srun --test-only to work correctly with timelimits
+ -- BGQ - If a job goes away while still trying to free it up in the
+    database, and the job is running on a small block make sure we free up
+    the correct node count.
 
 * Changes in SLURM 2.4.3
 ========================
